--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Profil Berliani Puspa Januar - Mahasiswa Keperawatan">
-    <title>Berliani Puspa Januar - Mahasiswa Keperawatan</title>
+    <link rel="icon" type="image/svg+xml" href="https://tse3.mm.bing.net/th/id/OIP.F-Zb196hYKliQeAr671zJQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" />
+    <title>Berliani Puspa </title>
     <style>
         /* Google Font */
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Satisfy&display=swap');
